[project]
name = "multiverse-market"
version = "0.1.0"
description = "A marketplace system for trading across multiple universes"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "greenlet>=3.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
    "typer[all]>=0.15.1",
    "uvicorn[standard]>=0.33.0",
]

[project.scripts]
multiverse-market = "multiverse_market.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "locust>=2.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiverse_market"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=multiverse_market --cov-report=term-missing"
testpaths = [
    "tests/unit",
    "tests/integration",
]
asyncio_mode = "auto" 
