[project]
name = "multiverse-market"
version = "0.1.0"
description = "A marketplace system for trading across multiple universes"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "greenlet>=3.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "typer>=0.15.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
multiverse-market = "multiverse_market.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "locust>=2.32.8",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]
dev = [
    "pyright>=1.1.352",
    "ruff>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiverse_market"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["multiverse_market"]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=multiverse_market --cov-report=term-missing"
testpaths = [
    "tests/unit",
    "tests/integration",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests that test business logic in isolation",
    "service: Tests for service layer",
    "currency: Tests related to currency exchange functionality",
    "purchase: Tests related to item purchase functionality",
    "user: Tests related to user operations",
    "item: Tests related to item operations",
    "cache: Tests related to caching functionality",
    "transaction: Tests related to transaction operations",
] 
